# colloidalcrystal_ml

./: .gitignore  DEPR_requirements.txt  L2_2.5nM_03_results.csv  L2_2.5nM_04_results.csv  README.md  environment.yml  environment_mac.yml  pyproject.toml  requirements.txt
Models/: RF_C-MC_I-P.sav  RF_C_MC.sav
Notebooks/: CC_DataViewing.ipynb  DataFigures_Experiment.ipynb  DataViewing_OverviewFigures.ipynb  DataViewing_Schultz.ipynb  Get_More_Features.ipynb  Get_More_Features_220815_JP.ipynb  Interior_Exterior_Edge.ipynb  RF_Notebook_20220727.ipynb  RF_Segment_and_Classify.ipynb  RF_Tests_New_Images.ipynb  RandomForest_Metric_Dataset.ipynb  RandomForest_Metric_LeafSize.ipynb  RandomForest_Metric_NumberTrees.ipynb  RandomForest_Trainer.ipynb  RandomForest_Trainer_old.ipynb  SEM_Analysis_220806_JP.ipynb  SEM_Classifying.ipynb  SVM_Trainer.ipynb  tree.dot
Results/: .~lock.values_1_default.csv#  L1 10nM  L1 2.5 nM  L1 5nM  training_data.csv  values_12.csv  values_1_default.csv  values_1_modded.csv  values_2_01.csv  values_2_default.csv  values_2_modded.csv  values_39.5 hold 1_None.csv  values_39.5 hold 1_modded.csv  values_3_default.csv  values_3_modded.csv  values_4 nM 7.csv  values_4 nM 7_TEST.csv  values_4 nM 7_TEST_adjust_label_increment.csv  values_L1_5nM_09_None.csv
Scripts/: 2024_run_image_folders.py  2024_train_new_models.py  colloidal_models_trials_running.py  colloidal_models_trials_training.py  data_analysis.py  edge_enhancer.py  make_colloidal_models.py  model_training_2023.py  process_new_data.py  process_new_data_2023.py  process_new_data_2023_fullsplit.py  (+6 more)
(+264 files in other folders)
