[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=['facet_ml']

[metadata]
name = 'facet_ml'
version = '0.2.0'

[project]
name = 'facet_ml'
version = '0.2.0'

[project.scripts]
qt_applet = "facet_ml.applet.app_main:run_app"
dash_applet = "facet_ml.applet.dash_main:run_app"
